<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/AboutLayout"
    android:layout_height="match_parent"
    tools:context=".ui.cast.AboutFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsv"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:paddingVertical="@dimen/standard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="DisableBaselineAlignment,UselessLeaf,UselessParent">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingHorizontal="@dimen/standard"
                    tools:ignore="UselessParent">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/birthday"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvBirthday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/birthday" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingHorizontal="@dimen/standard"
                    tools:ignore="UselessParent">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/age"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvAge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/_22" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:paddingVertical="@dimen/standard"
                tools:ignore="UselessLeaf,UselessParent">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingHorizontal="@dimen/standard"
                    tools:ignore="UselessParent">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/place_of_birth"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvPlaceOfBirth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/place_of_birth" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingHorizontal="@dimen/standard"
                    tools:ignore="UselessParent">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Department"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvDepartment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/acting" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal"
                tools:ignore="UselessLeaf,UselessParent">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingHorizontal="@dimen/standard"
                    tools:ignore="UselessParent">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/also_known_as"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvKnownAs"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="@tools:sample/full_names" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/IIDeathDay"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingHorizontal="@dimen/standard"
                    android:visibility="gone"
                    tools:ignore="UselessParent">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/deathday"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tvDeathDay"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="@tools:sample/date/ddmmyy" />

                </LinearLayout>

            </LinearLayout>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/standard"
                android:paddingTop="@dimen/standard"
                android:text="@string/biography"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

            <TextView
                android:id="@+id/tvBiography"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/standard"
                tools:text="@tools:sample/lorem/random" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>